# sync-folder

./: README.md
client/: monitor.py  pyproject.toml  utils.py
server/: pyproject.toml  server.py
