[tool.poetry]
name = "monitor-client"
version = "0.1.0"
description = ""
authors = ["Noam Loewenstern <noam.l@talon-sec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^3.0.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
