[tool.poetry]
name = "folder-sync-server"
version = "0.1.0"
description = ""
authors = ["Noam Loewenstern <noam.l@talon-sec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
